@@ -2,10 +2,10 @@
 use strict;
 use warnings;
 {package CallBacks;
+ use Net::Stomp::Frame;
  our @calls;
  sub new { bless {},shift }
- for my $m (qw(connect
-               subscribe unsubscribe
+ for my $m (qw(subscribe unsubscribe
                receive_frame ack
                send send_frame)) {
      no strict 'refs';
@@ -13,6 +13,16 @@ use warnings;
          push @calls,[$m,@_];
          return 1;
      };
+ }
+ sub connect {
+     push @calls,['connect',@_];
+     return Net::Stomp::Frame->new({
+         command => 'CONNECTED',
+         headers => {
+             session => 'ID:foo',
+         },
+         body => '',
+     });
  }
 }
 {package TestThing;
