@@ -1,4 +1,5 @@
 {{$NEXT}}
+- ->connect dies if the brokers returns an ERROR frame
 
 1.2       2012-07-12 17:46:58 Europe/London
 - new method "clear_destination" on ReadTrace
